tooling/nargo_cli/tests/snapshots/execution_success/1_mul/execute__tests__force_brillig_false_inliner_9223372036854775807.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: artifact
---
{
  "noir_version": "[noir_version]",
  "hash": "[hash]",
  "abi": {
    "parameters": [
      {
        "name": "x",
        "type": {
          "kind": "integer",
          "sign": "unsigned",
          "width": 32
        },
        "visibility": "private"
      },
      {
        "name": "y",
        "type": {
          "kind": "integer",
          "sign": "unsigned",
          "width": 32
        },
        "visibility": "private"
      },
      {
        "name": "z",
        "type": {
          "kind": "integer",
          "sign": "unsigned",
          "width": 32
        },
        "visibility": "private"
      }
    ],
    "return_type": null,
    "error_types": {
      "7233212735005103307": {
        "error_kind": "string",
        "string": "attempt to multiply with overflow"
      }
    }
  },
  "bytecode": [
    "func 0",
    "current witness index : _6",
    "private parameters indices : [_0, _1, _2]",
    "public parameters indices : []",
    "return value indices : []",
    "BLACKBOX::RANGE [(_0, 32)] []",
    "BLACKBOX::RANGE [(_1, 32)] []",
    "BLACKBOX::RANGE [(_2, 32)] []",
    "EXPR [ (1, _0, _1) (-1, _3) 0 ]",
    "BLACKBOX::RANGE [(_3, 32)] []",
    "EXPR [ (1, _3, _3) (-1, _4) 0 ]",
    "BLACKBOX::RANGE [(_4, 32)] []",
    "EXPR [ (1, _4, _4) (-1, _5) 0 ]",
    "BLACKBOX::RANGE [(_5, 32)] []",
    "EXPR [ (1, _5, _5) (-1, _6) 0 ]",
    "BLACKBOX::RANGE [(_6, 32)] []",
    "EXPR [ (-1, _2) (1, _6) 0 ]"
  ],
  "debug_symbols": "nZLNDoMgDMffpWcOgvPzVZbFoNaFhKBhsGQxvvsqG5selixeWuifX1vSztBj66+NMsN4g/o8Q2uV1ura6LGTTo2GovPCIF4bZxEpBBudqElaNA5q47VmcJfah0e3SZrgnbSkJgzQ9OQp4aA0rqeFfenkN8qL6g3zMvvg2f98xSNfFQd4kcT6gh+pL8SHTw/xuYh8Xu74C91kp+xuYpDSRxmcgs0IYpAHW0CdMiiDraA+MeDJy3FKt6wNWCVbje+5D950mzVwjykqcVEmO3bYe4trA0Gjlp4=",
  "file_map": {
    "50": {
      "source": "// Test unsafe integer multiplication with overflow: 12^8 = 429 981 696\n// The circuit should handle properly the growth of the bit size\nfn main(mut x: u32, y: u32, z: u32) {\n    x *= y;\n    x *= x; //144\n    x *= x; //20736\n    x *= x; //429 981 696\n    assert(x == z);\n}\n",
      "path": ""
    }
  },
  "names": [
    "main"
  ],
  "brillig_names": []
}
